--- a/.classpath
+++ b/.classpath
@@ -2,20 +2,18 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/byte-buddy-1.7.5.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/client-combined-3.6.0.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/client-combined-3.6.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/gson-2.8.0.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/guava-23.0.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/httpclient-4.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/httpcore-4.4.6.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/jna-4.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.6.0/jna-platform-4.1.0.jar"/>
-	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.141.59/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.141.59/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.141.59/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.141.59/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.141.59/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/selenium-java-3.141.59/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/MongoDB Jars/mongodb-driver-3.4.2.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/Mail/javax.mail-1.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/Jar files/jcommander-1.78.jar"/>
 	<classpathentry kind="lib" path="C:/Jar files/htmlunit-driver-2.27-with-dependencies.jar"/>
-	<classpathentry kind="lib" path="C:/Jar files/Mail/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
